<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineIzq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDrc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/LNombre"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/nombre"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/LApellidos"
        app:layout_constraintEnd_toStartOf="@id/txtNombre"
        app:layout_constraintStart_toEndOf="@id/guidelineIzq"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="200dp"
        android:layout_height="50dp"
         android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/introduce_nombre"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/txtApellidos"
        app:layout_constraintEnd_toStartOf="@id/guidelineDrc"
        app:layout_constraintStart_toEndOf="@id/LNombre"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop" />


    <TextView
        android:id="@+id/LApellidos"
        android:layout_width="100dp"
        android:layout_height="50dp"

         android:layout_marginTop="30dp"
        android:text="@string/apellidos"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/txtApellidos"
        app:layout_constraintStart_toEndOf="@id/guidelineIzq"
        app:layout_constraintTop_toBottomOf="@id/LNombre" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="200dp"
        android:layout_height="50dp"
         android:layout_marginTop="30dp"
        android:hint="@string/introduce_apellidos"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/guidelineDrc"
        app:layout_constraintStart_toEndOf="@id/LApellidos"
        app:layout_constraintTop_toBottomOf="@id/txtNombre" />

    <TextView
        android:id="@+id/LEdad"
        android:layout_width="100dp"
        android:layout_height="50dp"
         android:layout_marginTop="30dp"
        android:text="@string/edad"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/npEdad"
        app:layout_constraintStart_toEndOf="@id/guidelineIzq"
        app:layout_constraintTop_toBottomOf="@id/LApellidos" />

    <NumberPicker
        android:id="@+id/npEdad"
        android:layout_width="30dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/guidelineDrc"
        app:layout_constraintStart_toEndOf="@id/LEdad"
        app:layout_constraintTop_toBottomOf="@id/txtApellidos"
       />

    //spinner de productos

    <Spinner
        android:id="@+id/spProducto"
        android:layout_width="220dp"
        android:layout_height="60dp"
         android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:ems="10"
        app:layout_constraintStart_toEndOf="@id/guidelineIzq"
        app:layout_constraintTop_toBottomOf="@id/LEdad"
        app:layout_constraintEnd_toStartOf="@id/npCantidad"/>

    //picker de la cantidad

    <NumberPicker
        android:id="@+id/npCantidad"
        android:layout_width="30dp"
        android:layout_height="60dp"
         android:layout_marginTop="30dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/spProducto"
        app:layout_constraintEnd_toStartOf="@id/guidelineDrc"
        app:layout_constraintTop_toBottomOf="@id/npEdad" />

    <Button
        android:id="@+id/bAdd"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:onClick="annadirProducto"
        android:layout_marginTop="80dp"
        android:text="@string/a_adir_a_la_compra"
        app:layout_constraintTop_toBottomOf="@id/spProducto"
        app:layout_constraintBottom_toTopOf="@id/bFin"
        app:layout_constraintEnd_toStartOf="@id/guidelineDrc"
        app:layout_constraintStart_toEndOf="@id/guidelineIzq" />

    <Button
        android:id="@+id/bFin"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:text="@string/fin_compra"
        android:onClick="finCompra"
         android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineDown"
        app:layout_constraintEnd_toStartOf="@id/guidelineDrc"
        app:layout_constraintStart_toEndOf="@id/guidelineIzq"
        app:layout_constraintTop_toBottomOf="@id/bAdd"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="643dp" />




</androidx.constraintlayout.widget.ConstraintLayout>